--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-scroll": "^1.8.10",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "lucide": "^0.390.0",
+    "lucide-react": "^0.390.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
