--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
     "@types/react-scroll": "^1.8.10",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.2.12",
     "lucide": "^0.390.0",
     "lucide-react": "^0.390.0",
     "mini-svg-data-uri": "^1.4.4",
