--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "sweetalert2": "^11.12.1",
+    "sharp": "^0.33.4",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
