--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/theme": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
     "@types/react-scroll": "^1.8.10",
+    "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "lucide": "^0.390.0",
