--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "lucide": "^0.390.0",
     "lucide-react": "^0.390.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.3",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
