--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
     "@tabler/icons-react": "^3.5.0",
+    "@tanstack/react-query": "^5.90.2",
     "@types/react-scroll": "^1.8.10",
     "@vercel/speed-insights": "^1.0.12",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "lucide": "^0.390.0",
@@ -22,11 +24,14 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.4",
+    "sonner": "^2.0.7",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
