--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "jwt-decode": "^4.0.0",
     "lucide": "^0.390.0",
     "lucide-react": "^0.390.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.6",
     "quill": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
